--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "tailwindcss -i ./resources/css/app.css -o ./public/css/app.css --watch",
+        "build": "tailwindcss -i ./resources/css/app.css -o ./public/css/app.css --minify"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.17",
         "vite": "^5.0.0"
     }
 }
